# zipcode-coordinates

./: LICENSE  README.md  build.py  fetch-data.py  pyproject.toml  update.sh  version
.github/workflows/: publish.yml
zipcode_coordinates/: __init__.py  exceptions.py  version.py
zipcode_coordinates/data/: AT.md5  AT.py  CH.md5  CH.py  DE.md5  DE.py  de.md5  de.py
